--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.2",
+    "bootstrap": "^5.3.5",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.6.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
