Added buid.yaml in order to generate distribution zip automatically

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=backend
 
 logging.level.com.example==DEBUG
 
-base.url = ../repositories
+base.url = ${REPO_BASE_PATH:../repositories}
